Fix install command

--- a/site/package.json
+++ b/site/package.json
@@ -17,8 +17,7 @@
     "watch:css": "onchange \"src/scss\" -- run-s build:css",
     "watch:js": "onchange \"src/js\" -- run-s build:js",
     "watch:images": "onchange \"src/images\" -- run-s build:images",
-    "watch": "run-p serve watch:*",
-    "postinstall": "run-s build watch"
+    "watch": "run-p serve watch:*"
   },
   "devDependencies": {
     "autoprefixer": "^9.0.1",
