New landing page

--- a/site/package.json
+++ b/site/package.json
@@ -1,42 +1,61 @@
 {
-  "name": "strawberry-landing",
+  "name": "gatsby-typescript-starter-blog",
+  "description": "Gatsby Typescript Starter Blog",
   "version": "1.0.0",
+  "author": "Frank Ahn <frankahn9@gmail.com>",
+  "license": "MIT",
   "scripts": {
-    "clean": "rimraf dist/{css/*,js/*,images/*}",
-    "autoprefixer": "postcss -u autoprefixer -r dist/css/*",
-    "scss": "node-sass --output-style compressed -o dist/css src/scss",
-    "lint": "eslint src/js || true",
-    "lint-scss": "stylelint src/scss/*.scss --syntax scss || true",
-    "uglify": "mkdirp dist/js -p && uglifyjs src/js/*.js -m -c -o dist/js/main.min.js",
-    "imagemin": "imagemin src/images/* -o dist/images",
-    "serve": "browser-sync start --server --files \"dist/css/*.css, dist/js/*.js, **/*.html, !node_modules/**/*.html\"",
-    "build:css": "run-s lint-scss scss autoprefixer",
-    "build:js": "run-s lint uglify",
-    "build:images": "run-s imagemin",
-    "build": "run-s build:*",
-    "watch:css": "onchange \"src/scss\" -- run-s build:css",
-    "watch:js": "onchange \"src/js\" -- run-s build:js",
-    "watch:images": "onchange \"src/images\" -- run-s build:images",
-    "watch": "run-p serve watch:*"
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "start": "npm run develop",
+    "format": "prettier --write \"{,!(node_modules|public|coverage|.cache)/**/}*.{js,jsx,ts,tsx,json}\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "gatsby",
+    "typescript"
+  ],
+  "dependencies": {
+    "@types/react-responsive": "^3.0.3",
+    "@types/styled-components": "^4.1.10",
+    "babel-plugin-styled-components": "^1.10.0",
+    "gatsby": "^2.1.11",
+    "gatsby-image": "^2.0.29",
+    "gatsby-plugin-google-fonts": "^0.0.4",
+    "gatsby-plugin-manifest": "^2.0.18",
+    "gatsby-plugin-offline": "^2.0.24",
+    "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby-plugin-sharp": "^2.0.21",
+    "gatsby-plugin-styled-components": "^3.0.6",
+    "gatsby-plugin-typescript": "^2.0.8",
+    "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-images": "^3.0.4",
+    "gatsby-remark-responsive-iframe": "^2.0.9",
+    "gatsby-source-filesystem": "^2.0.21",
+    "gatsby-transformer-remark": "^2.2.5",
+    "gatsby-transformer-sharp": "^2.1.14",
+    "marksy": "^6.1.0",
+    "prism-react-renderer": "^0.1.5",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-helmet": "^5.2.0",
+    "react-responsive": "^6.1.1",
+    "styled-components": "^4.1.3",
+    "typescript": "^3.3.3"
   },
   "devDependencies": {
-    "autoprefixer": "^9.0.1",
-    "browser-sync": "^2.12.8",
-    "eslint": "^5.2.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "imagemin-cli": "^3.0.0",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^4.9.2",
-    "npm-run-all": "^4.1.3",
-    "onchange": "^4.1.0",
-    "postcss-cli": "^6.0.0",
-    "rimraf": "^2.5.4",
-    "stylelint": "^9.4.0",
-    "uglify-es": "^3.3.10"
+    "@types/node": "^11.9.4",
+    "@types/react": "^16.8.4",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-helmet": "^5.0.7",
+    "prettier": "^1.16.4",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^3.6.0"
   },
-  "main": ".eslintrc.js"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/frnki/gatsby-typescript-starter-blog"
+  }
 }
