--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ graphql-core-next = "^1.0"
 pytest = "^4.2"
 pdbpp = "^0.9.5"
 bpython = "^0.17.1"
+pytest-emoji = "^0.2.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
