--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ pdbpp = "^0.9.5"
 bpython = "^0.17.1"
 pytest-emoji = "^0.2.0"
 flake8 = "^3.7"
+flake8-black = {version = "^0.0.3",allows-prereleases = true}
+black = {version = "^18.3-alpha.0",allows-prereleases = true}
+isort = "^4.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
