--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.7"
 graphql-core-next = "^1.0"
+starlette = "^0.11.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.2"
@@ -22,3 +23,7 @@ isort = "^4.3"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+
+[tool.poetry.scripts]
+server = "strawberry.server:main"
