--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.7"
 graphql-core-next = "^1.0"
 starlette = "^0.11.3"
+click = "^7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.2"
@@ -20,10 +21,9 @@ flake8-black = {version = "^0.0.3",allows-prereleases = true}
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
 isort = "^4.3"
 
+[tool.poetry.scripts]
+server = "strawberry.server:main"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
-
-[tool.poetry.scripts]
-server = "strawberry.server:main"
