Add auto reload

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.7"
 graphql-core-next = "^1.0"
 starlette = "^0.11.3"
 click = "^7.0"
+hupper = "^1.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.2"
