--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ graphql-core-next = "^1.0"
 starlette = "^0.11.3"
 click = "^7.0"
 hupper = "^1.5"
+pygments = "^2.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.2"
