--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ black = {version = "^18.3-alpha.0",allows-prereleases = true}
 isort = "^4.3"
 
 [tool.poetry.scripts]
-server = "strawberry.server:main"
+strawberry = "strawberry.cli:run"
 
 [build-system]
 requires = ["poetry>=0.12"]
