--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.poetry]
-name = "strawberry"
-version = "0.1.0"
+name = "strawberry-graphql"
+packages = [ { include = "strawberry" } ]
+version = "0.2.2"
 description = "A library for creating GraphQL APIs"
 authors = ["Patrick Arminio <patrick.arminio@gmail.com>"]
 license = "MIT"
