Fix subscriptions and add test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest-emoji = "^0.2.0"
 flake8 = "^3.7"
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
 isort = "^4.3"
+pytest-asyncio = "^0.10.0"
 
 [tool.poetry.scripts]
 strawberry = "strawberry.cli:run"
