--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,11 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.7"
 graphql-core-next = "^1.0"
-starlette = "^0.11.3"
+starlette = "=0.12"
 click = "^7.0"
 hupper = "^1.5"
 pygments = "^2.3"
-uvicorn = "^0.4.6"
+uvicorn = "=0.7.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
