--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,9 +38,11 @@ isort = "^4.3"
 pytest-asyncio = "^0.10.0"
 pytest-cov = "^2.7"
 mypy = "^0.720.0"
+pytest-django = {version = "^3.5"}
 
 [tool.poetry.extras]
-django = ["django"]
+django = ["django","pytest-django"]
+
 
 [tool.poetry.scripts]
 strawberry = "strawberry.cli:run"
