--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ flake8 = "^3.7"
 black = {version = "^19.3b0",allows-prereleases = true}
 isort = "^4.3"
 pytest-asyncio = "^0.10.0"
+pytest-cov = "^2.7"
 
 [tool.poetry.scripts]
 strawberry = "strawberry.cli:run"
