--- a/.isort.cfg
+++ b/.isort.cfg
@@ -11,5 +11,5 @@ known_pytest=pytest
 known_future_library=future
 known_standard_library=types,requests
 default_section=THIRDPARTY
-known_third_party = base,click,github_release,graphql,hupper,pygments,starlette,uvicorn
+known_third_party = base,click,comment_templates,config,github,github_release,graphql,httpx,hupper,pygments,release,starlette,uvicorn
 sections=FUTURE,STDLIB,PYTEST,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
