removed asgiref dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ hupper = "^1.5"
 pygments = "^2.3"
 uvicorn = "=0.8.6"
 django = {version = "^2.0",optional = true}
-asgiref = {version = "^3.2",optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
@@ -42,7 +41,7 @@ mypy = "^0.720.0"
 pytest-django = {version = "^3.5"}
 
 [tool.poetry.extras]
-django = ["django","pytest-django","asgiref"]
+django = ["django","pytest-django"]
 
 
 [tool.poetry.scripts]
