Send release check comment via an API.
This should fix issues with PRs coming from forks.

--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -15,4 +15,4 @@ jobs:
     - name: Release file check
       uses: ./.github/release-check-action
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        API_URL: ${{ secrets.BOT_UTILS_API_URL }}
