--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ isort = "^4.3"
 pytest-asyncio = "^0.10.0"
 pytest-cov = "^2.7"
 mypy = "^0.720.0"
-pytest-django = {version = "^3.5"}
+pytest-django = {version = "^3.5", optional = true}
 
 [tool.poetry.extras]
 django = ["django","pytest-django"]
