--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pytest-cov = "^2.7"
 mypy = "^0.720.0"
 flake8-bugbear = "^19.8"
 pytest-django = {version = "^3.5", optional = true}
+pytest-mypy-plugins = "^1.0"
 
 [tool.poetry.extras]
 django = ["django","pytest-django"]
