--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = -xs --emoji
+addopts = -xs --emoji --mypy-ini-file=tests/mypy/config.cfg
 testpaths=tests/
 DJANGO_SETTINGS_MODULE=strawberry.contrib.django.tests.django_settings
