--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,14 +19,13 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-graphql-core-next = "^1.0"
 starlette = "=0.12.9"
 click = "^7.0"
 hupper = "^1.5"
 pygments = "^2.3"
 uvicorn = "=0.9.0"
 django = {version = "^2.0",optional = true}
-
+graphql-core = {version = "^3.0.0a0", allows-prereleases = true}
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
 pdbpp = "^0.10.0"
