--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ pygments = "^2.3"
 uvicorn = "=0.9.0"
 django = {version = "^2.0",optional = true}
 graphql-core = {version = "^3.0.0a0", allows-prereleases = true}
+sphinx = "^2.2"
+recommonmark = "^0.6.0"
+sphinx-rtd-theme = "^0.4.3"
+sphinx-markdown-tables = "^0.0.9"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pdbpp = "^0.10.2"
