--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pygments = "^2.3"
 uvicorn = "=0.10.0"
 django = {version = "^2.0",optional = true}
 graphql-core = {version = "^3.0.0a0", allows-prereleases = true}
+
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pdbpp = "^0.10.2"
@@ -40,6 +41,7 @@ mypy = "^0.740"
 flake8-bugbear = "^19.8"
 pytest-django = {version = "^3.6", optional = true}
 pytest-mypy-plugins = "^1.1"
+codecov = "^2.0"
 
 [tool.poetry.extras]
 django = ["django","pytest-django"]
