--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,3 +41,14 @@ jobs:
       - name: Install dependencies
         run: poetry install
       - run: poetry run flake8
+
+  mypy:
+    runs-on: ubuntu-latest
+    container: python:3.8
+
+    steps:
+      - uses: actions/checkout@master
+      - run: pip install poetry
+      - name: Install dependencies
+        run: poetry install
+      - run: poetry run mypy --ignore-missing-imports .
