--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - restore_cache:
           key: deps-{{ .Branch }}-{{ checksum "poetry.lock" }}
       - run:
-          command: poetry install --extras="django datetime"
+          command: poetry install --extras=django
       - save_cache:
           key: deps-{{ .Branch }}-{{ checksum "poetry.lock" }}
           paths:
