--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ pygments = "^2.3"
 uvicorn = "=0.9.0"
 django = {version = "^2.0",optional = true}
 graphql-core = {version = "^3.0.0a0", allows-prereleases = true}
-aniso8601 = {version = "^8.0.0",optional = true}
+aniso8601 = "^8.0.0"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pdbpp = "^0.10.2"
@@ -44,7 +44,6 @@ pytest-mypy-plugins = "~1.0"
 
 [tool.poetry.extras]
 django = ["django","pytest-django"]
-datetime = ["aniso8601"]
 
 
 [tool.poetry.scripts]
