--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pygments = "^2.3"
 uvicorn = "=0.10.0"
 django = {version = "^2.0",optional = true}
 graphql-core = {version = "^3.0.0a0", allows-prereleases = true}
+aniso8601 = "^8.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
