--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,8 @@ asgiref = "^3.2"
 pytest-flask = "^0.15.0"
 
 [tool.poetry.extras]
-django = ["django", "asgiref"]
+django = ["django","pytest-django"]
+flask = ["flask", "pytest-flask"]
 
 [tool.poetry.scripts]
 strawberry = "strawberry.cli:run"
