fixed django async tests + testpaths, updated contributing.md to install django extra in dev, renamed django test model so pytest doesn't try to use it as a test

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -11,5 +11,5 @@ known_pytest=pytest
 known_future_library=future
 known_standard_library=types,requests
 default_section=THIRDPARTY
-known_third_party = aniso8601,base,click,config,github_release,graphql,httpx,hupper,mypy,pygments,release,starlette,uvicorn
+known_third_party = aniso8601,asgiref,base,click,config,github_release,graphql,httpx,hupper,mypy,pygments,release,starlette,uvicorn
 sections=FUTURE,STDLIB,PYTEST,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
