--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,10 @@ click = "^7.0"
 hupper = "^1.5"
 pygments = "^2.3"
 uvicorn = "=0.10.0"
-django = {version = "^2.0",optional = true}
+django = {version = "^2.0", optional = true}
 graphql-core = {version = "^3.0.0a0", allows-prereleases = true}
 aniso8601 = "^8.0.0"
+asgiref = {version = "^3.2", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -34,18 +35,18 @@ pdbpp = "^0.10.2"
 bpython = "^0.18"
 pytest-emoji = "^0.2.0"
 flake8 = "^3.7"
-black = {version = "^19.3b0",allows-prereleases = true}
+black = {version = "^19.3b0", allows-prereleases = true}
 isort = "^4.3"
 pytest-asyncio = "^0.10.0"
 pytest-cov = "^2.8"
 mypy = "^0.740"
 flake8-bugbear = "^19.8"
-pytest-django = {version = "^3.6", optional = true}
+pytest-django = {version = "^3.6"}
 pytest-mypy-plugins = "^1.1"
 pytest-mock = "^1.11"
 
 [tool.poetry.extras]
-django = ["django","pytest-django"]
+django = ["django", "asgiref"]
 
 
 [tool.poetry.scripts]
