Always install django and pytest in dev

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,12 +40,14 @@ pytest-asyncio = "^0.10.0"
 pytest-cov = "^2.8"
 mypy = "^0.760"
 flake8-bugbear = "^19.8"
-pytest-django = {version = "^3.7", optional = true}
 pytest-mypy-plugins = "^1.2"
 pytest-mock = "^1.13"
+django = {version = "^2.0"}
+pytest-django = {version = "^3.7"}
+
 
 [tool.poetry.extras]
-django = ["django","pytest-django"]
+django = ["django"]
 
 
 [tool.poetry.scripts]
