--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on: pull_request
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
-    name: Test on ${{ matrix.container }}
+    name: Test on ${{ matrix.container }} - django ${{ matrix.django }}
     container: ${{ matrix.container }}
 
     strategy:
@@ -13,12 +13,15 @@ jobs:
         container:
           - python:3.8
           - python:3.7
+        django: [3.0.2, 2.2]
 
     steps:
       - uses: actions/checkout@master
       - run: pip install poetry codecov
       - name: Install dependencies
         run: poetry install --extras=django
+      - name: Install dependencies
+        run: poetry add django==${{ matrix.django }}
 
       - name: pytest
         run: |
