--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,18 +5,31 @@ on: pull_request
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
-    name: Test on ${{ matrix.container }} - django ${{ matrix.django }}
-    container: ${{ matrix.container }}
+    name: Test on ${{ matrix.python-version }} - django ${{ matrix.django }}
 
     strategy:
       matrix:
-        container:
-          - python:3.8
-          - python:3.7
+        python-version: ['3.7', '3.8', '3.9']
         django: [3.0.2, 2.2]
 
     steps:
       - uses: actions/checkout@master
+      - name: Install Python 3.9
+        if: matrix.python-version == '3.9'
+        run: |
+          sudo add-apt-repository ppa:deadsnakes/ppa
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends python3.9-dev python3.9-distutils python3.9-venv
+          python3.9 -m pip install --upgrade pip setuptools
+          python3.9 -m venv $HOME/venv-python3.9
+          echo "::set-env name=VIRTUAL_ENV::$HOME/venv-python3.9"
+          echo "::add-path::$HOME/venv-python3.9/bin"
+      - uses: actions/setup-python@v1
+        if: matrix.python-version != '3.9'
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: x64
+
       - run: pip install poetry codecov
       - name: Install dependencies
         run: poetry install --extras "django flask"
