--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,6 @@ flask = {version = "^1.1",optional = true}
 [tool.poetry.dev-dependencies]
 pytest = "^5.4"
 pdbpp = "^0.10.2"
-bpython = "^0.19"
 pytest-emoji = "^0.2.0"
 flake8 = "^3.7"
 black = {version = "^19.3b0",allow-prereleases = true}
@@ -47,6 +46,7 @@ django = {version = ">=2,<4"}
 pytest-django = {version = "^3.9"}
 asgiref = "^3.2"
 pytest-flask = {version = "^1.0.0"}
+requests = "^2.23.0"
 
 [tool.poetry.extras]
 django = ["django","pytest-django"]
