Disable tests for 3.9 for now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,9 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9']
+        # mypy is currently broken on python 3.9
+        # python-version: ['3.7', '3.8', '3.9']
+        python-version: ['3.7', '3.8']
         django: [3.0.2, 2.2]
 
     steps:
