--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
       - id: black
 
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.1
+    rev: 3.8.2
     hooks:
       - id: flake8
 
@@ -22,3 +22,8 @@ repos:
     rev: v4.3.21
     hooks:
       - id: isort
+
+  -   repo: https://github.com/patrick91/pre-commit-alex
+      rev: aa5da9e54b92ab7284feddeaf52edf14b1690de3
+      hooks:
+      -   id: alex
