--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ pytest-flask = {version = "^1.0.0"}
 requests = "^2.24.0"
 pre-commit = "^2.7.1"
 pytest-benchmark = "^3.2.3"
+freezegun = "^0.3.15"
 
 [tool.poetry.extras]
 django = ["django","pytest-django"]
