--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ django = {version = ">=2,<4",optional = true}
 graphql-core = {version = "^3.0.0"}
 asgiref = {version = "^3.2",optional = true}
 flask = {version = "^1.1",optional = true}
+pytest-benchmark = "^3.2.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4"
