--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = -xs --emoji --mypy-ini-file=tests/mypy/config.cfg --benchmark-skip
+addopts = -xs --emoji --mypy-ini-file=tests/mypy/config.cfg --benchmark-disable
 DJANGO_SETTINGS_MODULE=tests.django.django_settings
 testpaths=tests/
