--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
     rev: 3.8.2
     hooks:
       - id: flake8
+        additional_dependencies: ['flake8-eradicate==0.4.0']
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.770
