--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ pytest-asyncio = "^0.14.0"
 pytest-cov = "^2.10"
 mypy = "^0.782"
 flake8-bugbear = "^20.1"
+flake8-eradicate = "^0.4.0"
 pytest-mypy-plugins = "^1.4"
 pytest-mock = "^3.3"
 django = {version = ">=2,<4"}
