Update job name

--- a/.github/workflows/preview-docs.yml
+++ b/.github/workflows/preview-docs.yml
@@ -6,8 +6,7 @@ on:
     types: [preview-docs-command]
 
 jobs:
-  build:
-    name: Deploy docs preview
+  preview-docs:
     runs-on: ubuntu-latest
 
     if:
@@ -81,8 +80,6 @@ jobs:
               ...context.repo,
               ref
             });
-            console.log(checks.check_runs);
-            console.log(process.env.job);
 
             const check = checks.check_runs.filter(c => c.name === process.env.job);
             const { data: result } = await github.checks.update({
