--- a/.github/workflows/preview-docs.yml
+++ b/.github/workflows/preview-docs.yml
@@ -80,6 +80,9 @@ jobs:
               ...context.repo,
               ref
             });
+            console.log(checks.check_runs);
+            console.log(checks.check_runs.map(c => c.name));
+            console.log(process.env.job);
 
             const check = checks.check_runs.filter(c => c.name === process.env.job);
             const { data: result } = await github.checks.update({
