--- a/.github/workflows/preview-docs.yml
+++ b/.github/workflows/preview-docs.yml
@@ -82,10 +82,17 @@ jobs:
             });
 
             const check = checks.check_runs.filter(c => c.name === process.env.job || 'Deploy docs preview');
-            const { data: result } = await github.checks.update({
-              ...context.repo,
-              check_run_id: check[0].id,
-              status: 'completed',
-              conclusion: process.env.conclusion
-            });
-            return result;
+            # TODO: this is failing due to permissions
+            # const { data: result } = await github.checks.update({
+            #   ...context.repo,
+            #   check_run_id: check[0].id,
+            #   status: 'completed',
+            #   conclusion: process.env.conclusion
+            # });
+
+            await github.issues.createComment({
+              issue_number: process.env.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'todo'
+            })
