--- a/.github/workflows/preview-docs.yml
+++ b/.github/workflows/preview-docs.yml
@@ -90,7 +90,7 @@ jobs:
             //   conclusion: process.env.conclusion
             // });
 
-            const url = json.parse(process.env.DEPLOY_URL)
+            const url = JSON.parse(process.env.DEPLOY_URL)
             const message = `
               Website preview is ready here 👉 ${url}
             `.trim()
