--- a/.github/workflows/preview-docs.yml
+++ b/.github/workflows/preview-docs.yml
@@ -99,5 +99,5 @@ jobs:
               issue_number: process.env.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: process.env.DEPLOY_URL
+              body: message
             })
