Fix typing issues

--- a/tests/mypy/config.cfg
+++ b/tests/mypy/config.cfg
@@ -4,3 +4,6 @@ check_untyped_defs = True
 ignore_errors = False
 ignore_missing_imports = True
 strict_optional = True
+
+[mypy-graphql.*]
+ignore_errors = True
