--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.8
+ARG VARIANT=3.8
+FROM mcr.microsoft.com/vscode/devcontainers/python:${VARIANT}
 
-RUN pip3 install poetry
+RUN pip3 install poetry pre-commit
 RUN poetry config virtualenvs.in-project true
