--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     rev: 3.8.2
     hooks:
       - id: flake8
-        additional_dependencies: ['flake8-eradicate==0.4.0']
+        additional_dependencies: ["flake8-eradicate==0.4.0"]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.770
@@ -35,3 +35,11 @@ repos:
     hooks:
       - id: prettier
         files: '^docs/.*\.mdx?$'
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.2.0
+    hooks:
+      - id: trailing-whitespace
+      - id: check-merge-conflict
+      - id: end-of-file-fixer
+      - id: check-toml
