--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ graphql-core = {version = "^3.0.0"}
 asgiref = {version = "^3.2",optional = true}
 flask = {version = "^1.1",optional = true}
 typing_extensions = "^3.7.4"
+cached-property = "^1.5.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
