--- a/tests/mypy/test_union.yml
+++ b/tests/mypy/test_union.yml
@@ -17,6 +17,8 @@
     a: Response
     reveal_type(Response)
     reveal_type(a)
+
+    a = User('abc')
   out: |
     main:16: note: Revealed type is 'Any'
     main:17: note: Revealed type is 'main.Response'
