--- a/tests/mypy/test_union.yml
+++ b/tests/mypy/test_union.yml
@@ -19,6 +19,8 @@
     reveal_type(a)
 
     a = User('abc')
+    reveal_type(a)
   out: |
-    main:16: note: Revealed type is 'Any'
-    main:17: note: Revealed type is 'main.Response'
+    main:16: note: Revealed type is 'builtins.object'
+    main:17: note: Revealed type is 'Union[main.User, main.Error]'
+    main:20: note: Revealed type is 'main.User'
