--- a/tests/mypy/test_union.yml
+++ b/tests/mypy/test_union.yml
@@ -1,4 +1,4 @@
-- case: test_type
+- case: test_union
   main: |
     import typing
 
@@ -24,3 +24,28 @@
     main:16: note: Revealed type is 'builtins.object'
     main:17: note: Revealed type is 'Union[main.User, main.Error]'
     main:20: note: Revealed type is 'main.User'
+
+- case: test_union_generics
+  main: |
+    from typing import Generic, TypeVar
+
+    import strawberry
+
+    T = TypeVar("T")
+
+    @strawberry.type
+    class Error:
+        message: str
+
+    @strawberry.type
+    class Edge(Generic[T]):
+        node: T
+
+    Result = strawberry.union("Result", (Error, Edge[str]))
+    reveal_type(Result)
+
+    a: Result
+    reveal_type(a)
+  out: |
+    main:16: note: Revealed type is 'builtins.object'
+    main:19: note: Revealed type is 'Union[main.Error, main.Edge[builtins.str]]'
