--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
 repos:
   - repo: https://github.com/ambv/black
-    rev: 19.10b0
+    rev: 20.8b1
     hooks:
       - id: black
 
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.2
+    rev: 3.8.4
     hooks:
       - id: flake8
         additional_dependencies: ["flake8-eradicate==0.4.0"]
@@ -16,12 +16,12 @@ repos:
       - id: mypy
 
   - repo: https://github.com/asottile/seed-isort-config
-    rev: v2.1.1
+    rev: v2.2.0
     hooks:
       - id: seed-isort-config
 
   - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+    rev: v5.5.4
     hooks:
       - id: isort
 
@@ -31,7 +31,7 @@ repos:
       - id: alex
 
   - repo: https://github.com/prettier/prettier
-    rev: "master"
+    rev: "2.1.2"
     hooks:
       - id: prettier
         files: '^docs/.*\.mdx?$'
