Don't trigger release check on draft PRs

--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -14,3 +14,4 @@ jobs:
 
     - name: Release file check
       uses: ./.github/release-check-action
+      if: github.event.pull_request.draft == false
