--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
 
       - run: pip install poetry codecov
       - name: Install dependencies
-        run: poetry install --extras "django flask"
+        run: poetry install --extras "django flask opentelemetry"
       - name: Install dependencies
         run: poetry add django==${{ matrix.django }}
 
