Add opentelemetry to dev deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,8 @@ requests = "^2.24.0"
 pre-commit = "^2.7.1"
 pytest-benchmark = "^3.2.3"
 freezegun = "^1.0.0"
+opentelemetry-api = "^0.13b0"
+opentelemetry-sdk = "^0.13b0"
 
 [tool.poetry.extras]
 django = ["django","pytest-django"]
