--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ pytest-benchmark = "^3.2.3"
 freezegun = "^1.0.0"
 opentelemetry-api = "^0.13b0"
 opentelemetry-sdk = "^0.13b0"
+flake8-isort = "^4.0.0"
 
 [tool.poetry.extras]
 django = ["django","pytest-django"]
