Update prettier pre-commit hook repo

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,8 +25,8 @@ repos:
     hooks:
       - id: alex
 
-  - repo: https://github.com/prettier/prettier
-    rev: "2.1.2"
+  - repo: https://github.com/prettier/pre-commit
+    rev: v2.1.2
     hooks:
       - id: prettier
         files: '^docs/.*\.mdx?$'
