--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,4 +56,4 @@ jobs:
       - run: pip install poetry
       - name: Install dependencies
         run: poetry install
-      - run: poetry run mypy --ignore-missing-imports .
+      - run: poetry run mypy --ignore-missing-imports --config-file mypy.ini .
