--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ known_first_party = ["strawberry"]
 sections = ["FUTURE", "STDLIB", "PYTEST", "THIRDPARTY", "DJANGO", "GRAPHQL", "FIRSTPARTY", "LOCALFOLDER"]
 
 [tool.pytest.ini_options]
-addopts = "-xs --emoji --mypy-ini-file=tests/mypy/config.cfg --benchmark-disable"
+addopts = "-xs --emoji --mypy-ini-file=tests/mypy/mypy.ini --benchmark-disable"
 DJANGO_SETTINGS_MODULE = "tests.django.django_settings"
 testpaths = ["tests/"]
 [build-system]
