--- a/tests/mypy/mypy.ini
+++ b/tests/mypy/mypy.ini
@@ -4,6 +4,8 @@ check_untyped_defs = True
 ignore_errors = False
 ignore_missing_imports = True
 strict_optional = True
+implicit_reexport = False
+disallow_untyped_decorators = True
 
 [mypy-graphql.*]
 ignore_errors = True
