--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,5 @@
 [mypy]
 plugins = ./strawberry/ext/mypy_plugin.py
 implicit_reexport = False
-disallow_untyped_decorators = True
+; Disabled because of this bug: https://github.com/python/mypy/issues/9689
+; disallow_untyped_decorators = True
