--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,6 @@ flake8-bugbear = "^20.1"
 flake8-eradicate = "^1.0.0"
 pytest-mypy-plugins = "^1.6"
 pytest-mock = "^3.3"
-django = {version = ">=2,<4"}
 pytest-django = {version = "^4.1"}
 asgiref = "^3.2"
 pytest-flask = {version = "^1.0.0"}
@@ -60,6 +59,7 @@ opentelemetry-api = "^0.13b0"
 opentelemetry-sdk = "^0.13b0"
 flake8-isort = "^4.0.0"
 flake8-black = "^0.2.1"
+django = {version = ">=2,<4",optional = false}
 
 [tool.poetry.extras]
 django = ["django","pytest-django"]
