--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.7', '3.8', '3.9']
-        django: [3.0.2, 2.2]
+        django: [3.1.3, 3.0.2, 2.2]
 
     steps:
       - uses: actions/checkout@master
