--- a/mypy_tests.ini
+++ b/mypy_tests.ini
@@ -2,7 +2,7 @@
 plugins = strawberry.ext.mypy_plugin
 check_untyped_defs = True
 ignore_errors = False
-ignore_missing_imports = True
+; ignore_missing_imports = True
 strict_optional = True
 implicit_reexport = False
 ; Disabled because of this bug: https://github.com/python/mypy/issues/9689
