Try to fix mypy

--- a/mypy_tests.ini
+++ b/mypy_tests.ini
@@ -10,3 +10,10 @@ implicit_reexport = False
 
 [mypy-graphql.*]
 ignore_errors = True
+
+; Pydantic dependencies
+[mypy-email_validator.*]
+ignore_missing_imports = True
+
+[mypy-dotenv.*]
+ignore_missing_imports = True
