Add experimental support for Pydantic (#453)
PR: https://github.com/strawberry-graphql/strawberry/pull/453

* Add very rough WIP pydantic support

* Add some docs

* Add support for more types

* Add basic conversion to pydantic

* Force users to specify fields to copy over from pydantic

* Move exceptions in exceptions.py

* Implement `error_type` generation from model

* Move field in a separate file

* Use asdict for to_pydantic

* Move pydantic into beta namespace

* Remove docs about WIP features

* Add tests for the fields argument

* Throw an error if pydantic fields is empty

* Update error_type documentation

* Remove type prefix from pydantic doc

* Add pydantic to dev-dependencies for tests

* Add support for nested from_pydantic

* Add support for additional fields in the strawberry type

* Add documentation about extending types

* Extend pydantic doc about conversion

* Remove code from first WIP implementation

* Move pydantic in integrations and improve docs

* Test printed schema

* Mark pydantic as experimental

* Add support for Pydantic Field alias

* Try to fix mypy

* Improve docs

* Nitpicky changes

Co-authored-by: Marco Acierno <marcoaciernoemail@gmail.com>
Co-authored-by: ignormies <bryce.beagle@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ opentelemetry-api = {version = "^0.13b0",optional = true}
 opentelemetry-sdk = {version = "^0.13b0",optional = true}
 python-dateutil = "^2.7.0"
 cached-property = "^1.5.2"
+pydantic = {version = "^1.6.1", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1"
@@ -61,11 +62,13 @@ opentelemetry-sdk = "^0.13b0"
 flake8-isort = "^4.0.0"
 flake8-black = "^0.2.1"
 django = {version = ">=2,<4",optional = false}
+pydantic = {version = "^1.6.1", optional = false}
 
 [tool.poetry.extras]
 django = ["django","pytest-django"]
 flask = ["flask","pytest-flask"]
 opentelemetry = ["opentelemetry-api","opentelemetry-sdk"]
+pydantic = ["pydantic"]
 
 [tool.poetry.scripts]
 strawberry = "strawberry.cli:run"
