--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,9 @@ flake8-eradicate = "^1.0.0"
 pytest-mypy-plugins = "^1.6"
 pytest-mock = "^3.3"
 pytest-django = {version = "^4.1"}
+asgiref = "^3.2"
 pytest-flask = {version = "^1.1.0"}
+flask = {version = "^1.1"}
 requests = "^2.25.0"
 pre-commit = "^2.8.2"
 pytest-benchmark = "^3.2.3"
@@ -62,6 +64,7 @@ flake8-isort = "^4.0.0"
 flake8-black = "^0.2.1"
 django = {version = ">=2,<4", optional = false}
 pydantic = {version = "^1.6.1", optional = false}
+uvicorn = ">=0.11.6,<0.13.0"
 
 [tool.poetry.extras]
 debug-server = ["uvicorn"]
